# rust-codenames

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflow/: deploy_to_ecr.yml
.github/workflows/: deploy_to_ecr.yml
app/: Cargo.toml  index.html
app/src/: chat_server.rs  client.rs  database.rs  event.rs  game.rs  main.rs  server.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  CardCell.tsx  Chat.tsx  ChatView.tsx  GameBoardView.tsx  Items.tsx  JoinGamePage.tsx  Room.tsx  main.tsx
