[package]
name = "rust-codenames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-files = "0.6"
actix-web-actors = "4.1.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0"
anyhow = "1.0.58"
rust-embed="6.4.0"
mime_guess="2.0.4"